Australian localisation/desc update industry

--- a/localisation/english/MD_focus_AST_l_english.yml
+++ b/localisation/english/MD_focus_AST_l_english.yml
@@ -228,8 +228,8 @@ l_english:
  AST_expanding_renewables_desc: ""
  AST_green_subsidies: "Renewable Energy Government Subsidy"
  AST_green_subsidies_desc: ""
- AST_expanding_wind_farms: "Expanding Wind Farms"
- AST_expanding_wind_farms_desc: ""
+ AST_expadning_wind_farms: "Expanding Wind Farms"
+ AST_expadning_wind_farms_desc: ""
  
 
 
@@ -800,7 +800,7 @@ l_english:
  AST_Agriculture: "Agriculture"
  AST_Agriculture_desc: "The most valuable commodities produced by Australian farmers have been beef, wheat, barley and cotton. Australia is a small global agricultural producer, representing just 1% of global production. However we account for 3% of total agricultural global trade. We will open a subsidy to promote growth in the agricultural sector."
  AST_Support_Elders: "Support Elders"
- AST_Support_Elders_desc: ""
+ AST_Support_Elders_desc: "Elders is a company founded by Alexander Lang Elder in Adelaide in 1839, they are an agribusiness that provides agricultural goods. The company director recently lost millions on a Russian pie investment, which culminated in the bankruptcy of the over a 150-year-old firm. We will subside their bail-out to help stabilise the industry."
  AST_AgricultureSupport: "Agriculture Support"
  AST_AgricultureSupport_desc: "Our Government will provide a number of assistance measures to support farmers and farm businesses in rural Australia build a strong and resilient agriculture sector. These measures include a Drought Concessional Loans, Farm Management Deposits and a Farm Household Allowance."
  AST_Labour_Investment: "Labor Investment"
@@ -849,7 +849,7 @@ l_english:
  AST_expand_automation: "Expand Automation"
  AST_expand_automation_desc: "To cut operational costs and increase efficiency to help our industrial sector maintain economical viability advanced automation should be encouraged to small to medium business owners via a government advetising campaign targetted at the industry increasing awareness of these emergent technologies."
  AST_subsidise_current_industries: "Subsidise Current Industries"
- AST_subsidise_current_industries_desc: "Driven by rising global inflation has had a disastrous effect on our industrial sector in the past, to safeguard these industries into the future , an Industry subsidy partly a lump sum gaining interest to act as a safeguard and provide surety in the future as well some direct payments to those businesses currently struggling to stay afloat. "
+ AST_subsidise_current_industries_desc: "Driven by rising global inflation has had a disastrous effect on our industrial sector in the past, to safeguard these industries into the future. This Industry subsidy partially a lump sum gaining interest to act as a safeguard and provide surety in the future as well some direct payments to those businesses currently struggling to stay afloat. "
  AST_increase_productivity: "Increase Productivity"
  AST_increase_productivity_desc: "Australian engineering has always taken pride in their work in the industry for running the safest industrial workspaces, with our safe work standards being recognised internationally. The subsequent increase in administration required will be a result of enacting this policy."
  AST_reform_the_industry: "Reform the Industry"
@@ -901,77 +901,77 @@ l_english:
  AST_The_New_Home_of_Australian_Shipbuilding_desc: "With the new RAN base in Darwin in full operation and the Expanded Henderson shipyards complete, we can streamline and maximise our naval production efforts between our shipyards."
 #Industry-Infrastructure
  AST_Review_Australian_Infrastructure: "Review Australian Infrastructure"
- AST_Review_Australian_Infrastructure_desc: ""
+ AST_Review_Australian_Infrastructure_desc: "A review of critical Australian Infrastructure will be undertaken, checking that the design and implementation of trade practices in our construction Industry are are optimised, This review will work with local councils on building new roads and with the state government to expand the capacity of our rail network."
  AST_Roads_of_Significant_Importance_ROSI: "Roads of Significant Importance"
- AST_Roads_of_Significant_Importance_ROSI_desc: ""
+ AST_Roads_of_Significant_Importance_ROSI_desc: "Roads that are essential to Australia, such as the Pacific Highway the main Highway linking all of the Australian east coastal cities and state capitals cities, require planned upgrades to meet future capacity demand, in this plan there is an small allocation of funds to help prepare our government contractors for their future operations."
  AST_DevelopedRegions: "Developed Regions"
- AST_DevelopedRegions_desc: ""
+ AST_DevelopedRegions_desc: "This programme will focus on improving efficiency in urban areas as well as providing alternative means of transport such as expanding the bus network coverage and the building of additional lanes of road to alleviate congestion."
  AST_Under-developedregions: "Under-developed Regions"
- AST_Under-developedregions_desc: ""
+ AST_Under-developedregions_desc: "The quality of our roads in rural areas requires maintainence to keep our agricultural & mining sector running, this funding will also include bridge repairs and the contruction of flood resistant levys in these rural regions."
  AST_developing_inner_city_rail: "Developing the Inner City Rail"
- AST_developing_inner_city_rail_desc: ""
+ AST_developing_inner_city_rail_desc: "The inner-city light rail project alongside a proposed tram system will provide an efficent means of transport for those inside the metro area of our state capital cities, leading to a reduction in vehicle volume and eases the financial burden of parking space with the city council"
  AST_Renewing_old_interstate_highways: "Renewing old Interstate Highways"
- AST_Renewing_old_interstate_highways_desc: ""
+ AST_Renewing_old_interstate_highways_desc: "The National Highway is a system of roads connecting all mainland states and territories of Australia, National funding for roads began in the 1920s. The Federal Government did not completely fund any roads until 1974 with the introduction of the National Roads Act 1974."
  AST_Developing_rural_roads_and_highways: "Developing Rural Roads and Highways"
- AST_Developing_rural_roads_and_highways_desc: ""
+ AST_Developing_rural_roads_and_highways_desc: "An effort to improve the roads in and to our smaller regional cities, including adding by-pass tunnels at the mountains to the New England region will improve the efficiency of these areas by reducing transit times to these cities."
  AST_Focus_on_major_cities: "Focus on major Cities"
- AST_Focus_on_major_cities_desc: ""
+ AST_Focus_on_major_cities_desc: "A proposed underground subway network, and new underground tunnels designed for multi lane traffic are ready for to commence building in our states capital cities, including the Brisbane Cross River Rail’s twin tunnels, the restablishment of Adelaides abandoned plan to build a subway from the 1800s to span the river Torrens."
  AST_Focus_on_regional_cities: "Focus on Regional Cities"
- AST_Focus_on_regional_cities_desc: ""
+ AST_Focus_on_regional_cities_desc: "Regional cities such as Newcastle with their steel ports or Ballarat growing potatoes or even Armidale producing wine all play a vital role in keeping our nation running, a tax cut to eligable citizens working in these regions should promote growth and prosperity in these cities."
 #Industry-Mining
  AST_Mining: "Australias Mining Sector"
- AST_Mining_desc: ""
+ AST_Mining_desc: "At the end of the century Australia had become a major world producer and exporter of coal, iron ore, and other materials. Minerals and energy were the largest commodity export by value in 1998-99 at $39.2b also contributing 36% of Australian exports of goods and services, an investment into this mining will promote job growth and output in the sector."
  AST_The_Minerals_Council_of_Australia: "The Minerals Council of Australia"
- AST_The_Minerals_Council_of_Australia_desc: ""
+ AST_The_Minerals_Council_of_Australia_desc: "Minerals Council of Australia is the leading advocate for Australia's minerals industry, promoting and enhancing sustainability, profitability and competitiveness. Australia being the world’s leading producer of bauxite, alumina, rutile and tantalum , funding will be provided for the minerals council to boost our foreign exports."
  AST_Mining_industryprivatisation: "Mining Industry Privatisation"
- AST_Mining_industryprivatisation_desc: ""
+ AST_Mining_industryprivatisation_desc: "A privatisation of the government owned mining assests may increase operational output as well as reduce the economical burden of maintaining and running these mines, however the reduction of our government employees prescense may adversly affect voters intentions in these areas. "
  AST_Foreign_MiningInvestment: "Foreign Mining Investment"
  AST_Foreign_MiningInvestment_desc: ""
  AST_FurtherPrivatise_Public_Sector_Mining: "Further Privatise Public Sector Mining"
- AST_FurtherPrivatise_Public_Sector_Mining_desc: ""
+ AST_FurtherPrivatise_Public_Sector_Mining_desc: "Privatisation of our remaining mining assests will further increase operational output but will come at the direct cost of lost income and a general dissatisfaction in the public with this policy."
  AST_Trust_In_Hawke-Keating_Reform: "Trust In Hawke-Keating Reform"
- AST_Trust_In_Hawke-Keating_Reform_desc: ""
- AST_East: "Eastern Australia Mining"
- AST_East_desc: ""
- AST_West: "Western Australia Mining"
- AST_West_desc: ""
+ AST_Trust_In_Hawke-Keating_Reform_desc: "The Hawke-Keating government floated the Australian dollar, repealed rules that prohibited foreign-owned banks to operate in Australia, dismantled the lucrative tariff system and sold off part of the state owned Commonwealth Bank. These questionable policies have prompted the government to abandon their ill-fated policy."
+ AST_East: "Eastern Oriented Mining"
+ AST_East_desc: "A steady growth in demand for high quality Australian iron ore and coal from China being the 6th largest export destination and the third largest exporter, we can address this trade imbalance by aligning our market to suit China's growing needs."
+ AST_West: " Western Oriented Mining"
+ AST_West_desc: "In 1999 our two largest trading partners were Japan and America respectively for both import and exports, our history of co-operation between these friendly nations has grown in recent years in no small part due to the growing bilateral trade, we shall ensure the future needs of our trading partners is adequately satisified. "
  AST_GovernmentMining_InfrastructureGrants: "Government Mining Infrastructure Grants"
- AST_GovernmentMining_InfrastructureGrants_desc: ""
+ AST_GovernmentMining_InfrastructureGrants_desc: "Investing in our not only our own state owned enterprises, direct investment into private companies is a pragmatic approach to have both sides of the Industry working in tandem to safeguard against potential commodities shortages and private industry mismanagement."
  AST_Tax_Breaks_for_InternationalMining_Companies: "Tax Breaks for International Mining Companies"
- AST_Tax_Breaks_for_InternationalMining_Companies_desc: ""
+ AST_Tax_Breaks_for_InternationalMining_Companies_desc: "Tax Incentives will be offered to mining companies in the form of Carbon Credits, which will result in a substantial loss of tax revenue. It may also cause some citizens to raise questions if they found out an investigation found that more than 90% of the carbon offsets from the world's largest carbon standard, Verra, were bogus. "
  AST_Tax_Breaks_for_DomesticMining_Companies: "Tax Breaks for Domestic Mining Companies"
- AST_Tax_Breaks_for_DomesticMining_Companies_desc: ""
+ AST_Tax_Breaks_for_DomesticMining_Companies_desc: "Tax concessions for domesticaly owned mining companies is proposed that we should first help the our own industry before giving concessions to other foreign firms, once implemented the concessions will have a substantial ongoing cost in the form of potential lost revenue."
  AST_A_Rising_Tide_Global_commodity_price_increase: "A Rising Tide of Global Commodity Price Inflation"
- AST_A_Rising_Tide_Global_commodity_price_increase_desc: ""
+ AST_A_Rising_Tide_Global_commodity_price_increase_desc: "Due to ever-increasing demand for our natural resources and other factors affecting global stability, the price of our commodities have risen sharply leading to an unexpected windfall as we are able to invest this new revenue into our nation."
  AST_Protect_AboriginalLands: "Enforce Aboriginal Land Claims"
- AST_Protect_AboriginalLands_desc: ""
+ AST_Protect_AboriginalLands_desc: "We will enforce the Aboriginal claims to valuable mining lands, this will come at a substantial cost of lost revenue and potential future licensing access fees to these resources, and government administration to monitor the agreements, public sentiment on this issue may be divided."
  AST_Exploit_AborigonalLands: "Utilise Aboriginal Claimed lands"
- AST_Exploit_AborigonalLands_desc: ""
+ AST_Exploit_AborigonalLands_desc: "The Land Rights Act does not allow traditional claimants who have consented to exploration to refuse any subsequent mining or hydrocarbon development. Which rightfully allows the government to re-utilise any lands that have been explored before at any point in the past to legally be resumed at any time."
  AST_Balance_in_all_things: "A Balanced Socio-Industrial Mining Policy"
- AST_Balance_in_all_things_desc: ""
+ AST_Balance_in_all_things_desc: "The owners of the land concessions made previously by the government will be made contact with and an effort established to seek licensing for access, this will increase our welfare spending but also increase our mineral output and total available resources."
  AST_Australia_A_Global_Mining_Power: "Australia A Global Mining Power"
- AST_Australia_A_Global_Mining_Power_desc: ""
+ AST_Australia_A_Global_Mining_Power_desc: "After prioritising first of free access to valuable mining resources we are in a position to expand our profits to their maximum potential in the mining sector, Our final policy expansion will truly make us a global mining power."
 #Industry-Energy
  AST_Energy: "Australian Energy Industry"
- AST_Energy_desc: ""
+ AST_Energy_desc: "Total electricity generation in Australia in 1999 was around 240 terawatt hours and renewable generation was 40 terawatt hours. A review  will commence of critical systems and removing inefficient redundancies toimprove our power generation factor."
  AST_PrivatiseNational_Energy: "Privatise the National Energy Grid"
- AST_PrivatiseNational_Energy_desc: ""
+ AST_PrivatiseNational_Energy_desc: "Opening the energy market to private companies may increase competition and deliver a lower energy cost to consumers, the drawbacks being these companies are now in control of the maitainence of the energy grid."
  AST_Commit_to_Renewable_Energy: "Commit to Renewable Energy"
- AST_Commit_to_Renewable_Energy_desc: ""
+ AST_Commit_to_Renewable_Energy_desc: "Commiting to a policy of renewable energy alternatives may reduce our carbon footprint, and alleviate demand on our existing coal powered generators. leading to lower emissions due to lower amounts of power being required via coal."
  AST_Scrap_greenpower_funding: "Utilise Coal & Natural Gas"
- AST_Scrap_greenpower_funding_desc: ""
+ AST_Scrap_greenpower_funding_desc: "The lessons of the recent decade make it clear that solar, wind, and battery technologies cannot be surged in times of need, are neither inherently ‘clean’ nor even independent of hydrocarbons, and are not cheap. Our plan is to continue to use clean coal fired power stations equipped with carbon capture filters."
  AST_Increase_Domestic_Fossil_Fuel_Production: "Increase Domestic Coal & Natural Gas Production"
- AST_Increase_Domestic_Fossil_Fuel_Production_desc: ""
+ AST_Increase_Domestic_Fossil_Fuel_Production_desc: "An increase to our domestic natural gas LNG and coal to meet growing demand from our domestic energy generation requirements and our energy dependent trading partners."
  AST_Solar_Farms: "New Solar Farms"
- AST_Solar_Farms_desc: ""
+ AST_Solar_Farms_desc: "Since Australia currently has no domestic production of solar panels, they will be imported. Recently Switzerland achieved 11% efficient energy conversion rate. Solar panels have a 25 year peak efficiency and will need to be replaced in the future and will also require to be safeguarded against extreme weather events such as hail."
  AST_Wind_Farms: "Invest in Wind Farms"
- AST_Wind_Farms_desc: ""
+ AST_Wind_Farms_desc: "A  a 150 megawatt wind farm (the standard size of wind farms proposed under development for NSW) produces enough electricity to power around 60,000–65,000 homes, saving on average 360,000 tonnes of greenhouse gas emissions annually, excluding maitainence and the production cost of the materials."
  AST_Tesla_Megapacks: "Tesla Megapacks Energy Storage"
- AST_Tesla_Megapacks_desc: ""
+ AST_Tesla_Megapacks_desc: "A Telsa Megapack costs  $1.24M USD per unit and has a capacity of 2.6 MWh and is warranted for 15years, offering a prospected 16 TWh storage capacity at maximium usage for the 15 year duration. The units are modular and can be scaled to suit requirements in the future, it will offer a means to store power generated by renewable sources."
  AST_Green_PowerSubsidies: "Renewable Power Subsidies"
- AST_Green_PowerSubsidies_desc: ""
+ AST_Green_PowerSubsidies_desc: "Renewable power subsidies are being utilised for the Snowy Mountains Hydroelectric scheme 2.0, as well as encouraging the use and supplying energy saving light bulbs with LED technology in all citizens housing and government buildings, reducing energy consumption as a whole."
  AST_ImportOil_and_Gas: "Import Oil and Gas"
- AST_ImportOil_and_Gas_desc: ""
+ AST_ImportOil_and_Gas_desc: "A temporary influx of fuel is required to meet our current demands, However our foreign trading partners are willing to send whatever extra reserves they may have."
 
 
 #military
