--- a/localisation/simp_chinese/MD_focus_AZE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_AZE_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  azerbaijan_focus_historical_early: "阿塞拜疆国策树"
  AZE_aze_the_state: "我们的国家"
- AZE_aze_the_state_desc: "阿塞拜疆是一个新生的国家，她的问题不总像大家所认为的成熟，但是我们仍需解决问题。"
+ AZE_aze_the_state_desc: "阿塞拜疆是一个年轻的国家，它的问题并不总是像人们想象的那样成熟，但仍需要解决。"
  AZE_aze_the_man: "那个人"
  AZE_aze_the_man_desc: "阿利耶夫是我们的国父，我们需要在媒体上适当地表现这一点。"
  AZE_aze_pers_cult: "阿利耶夫崇拜"
@@ -478,8 +478,6 @@
  AZE_New_army_core_desc: "新的、专业的军队核心将确保我们保持独立"
  AZE_Professional_army: "专业军队"
  AZE_Professional_army_desc: "军队不是一个笑话，而是一件严肃的事情，让我们把它变得专业"
- AZE_Army_manouvers: "军事演习"
- AZE_Army_manouvers_desc: "军队需要时不时地展示自己的实力，以免生锈"
  AZE_Air_dominance: "空中霸权"
  AZE_Air_dominance_desc: "我们需要确保我们在我们的天空中拥有空中霸权"
  AZE_Officer_schools_dem: "军官学校民主化"
@@ -939,3 +937,5 @@
  karabakh_readiness_low: "低战备状态"
  karabakh_readiness_medium: "中等战备状态"
  karabakh_readiness_high: "高战备状态"
+ AZE_Army_maneuvers: "军队整训"
+ AZE_Army_maneuvers_desc: "军队需要时不时地展示一下自己的实力，以免生疏。"
