--- a/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CES_l_simp_chinese.yml
@@ -28,22 +28,18 @@
  UZB_karapalkstan.1.d: "今天上午，乌兹别克人和卡拉卡尔帕克人在当地清真寺发生了冲突。起初只是口角，但后来突然演变成流血冲突。双方都认为，对方在他们的土地上奉行一个与他们格格不入的宗教。我们到底站在哪一边？"
  UZB_karapalkstan.1.a: "支持卡拉卡尔帕克人"
  UZB_karapalkstan.1.b: "支持乌兹别克人"
- UZB_karapalkstan.1.c: "找到一个让双方都满意的解决方案"
  UZB_karapalkstan.2.t: "卡拉卡尔帕克人和乌兹别克人的酒吧斗殴"
  UZB_karapalkstan.2.d: "几个小时前，乌兹别克人和卡拉卡尔帕克人之间发生了一起酒后口角。冲突的起因是双方政见不同。双方在相互辱骂后，便借助外物激烈厮打起来。"
  UZB_karapalkstan.2.a: "支持卡拉卡尔帕克人"
  UZB_karapalkstan.2.b: "支持乌兹别克人"
- UZB_karapalkstan.2.c: "找到一个让双方都满意的解决方案"
  UZB_karapalkstan.3.t: "当地球队在球场上斗殴"
  UZB_karapalkstan.3.d: "几个小时前，乌兹别克足球队成员之间发生了冲突。主要原因是种族分歧。据了解，其中一名队员用非常具有攻击性的语言称呼另一名不同族队员，这导致了足球场上的骚乱。"
  UZB_karapalkstan.3.a: "支持卡拉卡尔帕克人"
  UZB_karapalkstan.3.b: "支持乌兹别克人"
- UZB_karapalkstan.3.c: "找到一个让双方都满意的解决方案"
  UZB_karapalkstan.4.t: "卡拉卡尔帕克节期间的冲突"
  UZB_karapalkstan.4.d: "当地的卡拉卡尔帕克人正在庆祝他们的民族节日时，激进的乌兹别克人袭击了庆祝者。多人受伤，袭击者被警方拘留。我们应该如何处理此事？"
  UZB_karapalkstan.4.a: "支持卡拉卡尔帕克人"
  UZB_karapalkstan.4.b: "支持乌兹别克人"
- UZB_karapalkstan.4.c: "找到一个让双方都满意的解决方案"
  KAZ_high_emigration_5: "巨量移民"
  KAZ_high_emigration_5_desc: "随着苏联解体和经济形势的恶化，许多独联体国家深陷过度移民的泥潭。"
  KAZ_high_emigration_4: "大量移民"
@@ -223,27 +219,19 @@
  CES_broken_economy_idea_3: "轻微破坏的经济体系"
  CES_broken_economy_idea_3_desc: "苏联解体后，苏联计划经济体制的遗留问题使[FROM.GetName]陷入困境。经济基础设施是集中管理的，这使得向市场经济的过渡变得更加困难和痛苦。许多资源区的丧失和对能源供应的依赖也影响了[FROM.GetName]的经济。共和国失去了获得苏联控制的一些自然资源的权利。这导致经济不稳定和收入短缺。"
  CES_outdated_army_idea: "军事混乱"
- CES_outdated_army_idea_desc: "苏联的解体使哈萨克斯坦进入了一个新的地缘政治环境，这给前苏联加盟共和国和新独立国家的关系带来了不确定性。这使得武装部队的管理变得复杂，需要对军队的战略和结构进行审查。"
+ CES_outdated_army_idea_desc: "苏联解体使我国陷入新的地缘政治环境，与前苏联加盟共和国和新独立国家的关系变得不确定。这给军队管理带来了复杂性，需要重新审视军队的战略和结构。"
  CES_outdated_army_idea_1: "混乱的军事控制"
- CES_outdated_army_idea_1_desc: "苏联的解体使哈萨克斯坦进入了一个新的地缘政治环境，这给前苏联加盟共和国和新独立国家的关系带来了不确定性。这使得武装部队的管理变得复杂，需要对军队的战略和结构进行审查。"
+ CES_outdated_army_idea_1_desc: "苏联解体使我国陷入新的地缘政治环境，与前苏联加盟共和国和新独立国家的关系变得不确定。这给军队管理带来了复杂性，需要重新审视军队的战略和结构。"
  CES_outdated_army_idea_2: "腐败的军事控制"
- CES_outdated_army_idea_2_desc: "苏联的解体使哈萨克斯坦进入了一个新的地缘政治环境，这给前苏联加盟共和国和新独立国家的关系带来了不确定性。这使得武装部队的管理变得复杂，需要对军队的战略和结构进行审查。"
+ CES_outdated_army_idea_2_desc: "苏联解体使我国陷入新的地缘政治环境，与前苏联加盟共和国和新独立国家的关系变得不确定。这给军队管理带来了复杂性，需要重新审视军队的战略和结构。"
  CES_outdated_army_idea_3: "无效的军事控制"
- CES_outdated_army_idea_3_desc: "苏联的解体使哈萨克斯坦进入了一个新的地缘政治环境，这给前苏联加盟共和国和新独立国家的关系带来了不确定性。这使得武装部队的管理变得复杂，需要对军队的战略和结构进行审查。"
+ CES_outdated_army_idea_3_desc: "苏联解体使我国陷入新的地缘政治环境，与前苏联加盟共和国和新独立国家的关系变得不确定。这给军队管理带来了复杂性，需要重新审视军队的战略和结构。"
  CES_army_modernization: "军队现代化"
  CES_army_modernization_desc: "我军现代化是我军建设的重要关键。"
- CES_centr_warfare: "集中作战"
- CES_centr_warfare_desc: "我们的军队应该以东方集中作战为榜样"
- CES_networ_warfare: "以网络为中心的战争"
- CES_networ_warfare_desc: "我们的军队应该借鉴西方网络中心战的榜样。"
- CES_partis_warfare: "游击战"
- CES_partis_warfare_desc: "我们应该以游击战争为我们军队的榜样。"
  CES_create_territorial_defence: "建立国土防御"
  CES_create_territorial_defence_desc: "国土防御建设是国防能力形成的重要内容。"
  CES_airforce_trainings: "空军训练"
  CES_airforce_trainings_desc: "空军培训计划对于确保其航空人员的战备状态和专业水平至关重要。这些项目涵盖一系列活动，包括飞行模拟、技术技能开发和国际合作。它们对于增强国家防御能力和保护领空、促进中亚国家安全和地区稳定至关重要。"
- CES_buying_planes: "装备空军"
- CES_buying_planes_desc: "如果我们的空军没有装备，就无法充分执行既定任务，完成任务。"
  CES_india_air: "印度飞机"
  CES_india_air_desc: "我们可能会在我们和印度之间安排一项军火交易，为我们的空军购买新型现代化飞机。"
  CES_russian_air: "俄罗斯飞机"
@@ -1295,3 +1283,9 @@
  centralkaz.3518.t: "[FROM.GetName]拒绝了我们的提议！"
  centralkaz.3518.d: "他们不会加入突厥议会。"
  centralkaz.3518.a: "呃"
+ CES_modern_warfare: "现代战争"
+ CES_modern_warfare_desc: "必须使我们的军队适应现代现实，以便我们能够有效抵御任何外部威胁。"
+ CES_new_air_doctrine: "新空军学说"
+ CES_new_air_doctrine_desc: "我们需要改变我们的空战策略。"
+ they_lowered_our_debt_tt: "§G他们降低了我们的债务§!"
+ they_refused_lowering_our_debt_tt: "§R他们拒绝了我们降低债务的提议§!"
