--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -522,8 +522,6 @@
  CHI_Pearl_River_Megalopolis_desc: "中国南部的珠江三角洲是一个庞大的城市中心，由广州、深圳、珠海等多个城市组成。珠江三角洲的总人口超过5000万，是世界上人口和面积最大的城市地区。"
  CHI_Jing_Jin_Ji_Megacity: "京津冀都市圈"
  CHI_Jing_Jin_Ji_Megacity_desc: "在北方与珠三角对应是京津冀都市圈，这是一个城市群，包括北京、天津和河北三省，三省之间的联系日益紧密。我们的“京津冀”战略将发挥各省的优势，最大限度地发挥该地区三个城市中心的经济潜力。"
- CHI_Go_West_Strategy: "西部大开发战略"
- CHI_Go_West_Strategy_desc: "虽然中国东部沿海地区在邓小平“改革开放”政策下取得了快速发展，但人口稀少、农村人口较多的西部地区却没有取得同样的快速发展。我们应该努力纠正这种不平等。"
  CHI_West_Triangle_Economic_Zone: "西三角经济区"
  CHI_West_Triangle_Economic_Zone_desc: "中国西部并非没有大城市，重庆、成都、西安都是经济发达的西部大城市，投资这些西部城市有望带动西部其他地区发展。"
  CHI_Xinjiang_Development_Plan: "新疆发展计划"
@@ -1286,7 +1284,7 @@
  arunachal_war.2.d: "最近一次军事演习中，发生了一起事故，导致多名士兵受伤，部分装备受损。"
  arunachal_war.2.a: "这是常有之事。"
  arunachal_war.3.t: "失败的模拟攻击"
- arunachal_war.3.d: "在最近的模拟攻击演习中，我们遭到了未知对手的炮击。确切的原因无法确定，并且提出了许多令人不安的问题。"
+ arunachal_war.3.d: "在最近的佯攻中，我们遭到了未知对手的炮击。具体原因尚不清楚，也引发了许多令人不安的问题。"
  arunachal_war.3.a: "没法更糟了"
  arunachal_war.4.t: "攻击已取消"
  arunachal_war.4.d: "正当我们准备进攻进攻的时候，敌人先动手了，现在我们得守住了。"
@@ -1596,3 +1594,5 @@
  CHI_Xiaomi_Vehicle: "小米车辆"
  CHI_The_Northern_Shield: "北境之盾"
  CHI_The_Northern_Shield_desc: "历史上，中国的敌人总是来自北方，必须让我们的边境远离我们的首都，夺回我们的北境之盾。\n‘是故重新疆者，所以保蒙古；保蒙古者，所以卫京师。’"
+ CHI_Western_Development_Strategy: "西部大开发战略"
+ CHI_Western_Development_Strategy_desc: "虽然中国东部沿海地区在邓小平“改革开放”政策下取得了快速发展，但人口稀少、农村人口较多的西部地区却没有取得同样的快速发展。我们应该努力纠正这种不平衡现象，实现各地区均衡发展。"
