--- a/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_ITA_l_simp_chinese.yml
@@ -2155,7 +2155,7 @@
  one_time_paycheck_bonus: "一次性工资奖金"
  one_time_paycheck_bonus_desc: "我们可以以刺激内部消费为借口，在员工工资中一次性发放一大笔奖金，以提高我们的知名度。"
  economic_concessions_to_oppositions: "对反对派的经济让步"
- economic_concessions_to_oppositions_desc: "解决反对党权力基础的担忧可能会为我们提供政治回旋余地。"
+ economic_concessions_to_oppositions_desc: "解决对立党派权力基础的担忧也许能为我们确保政治回旋的空间。"
  extraordinary_church_donation: "非凡的教堂捐赠"
  call_in_favours_with_unions: "呼吁工会支持"
  levy_extra_church_tax: "征收额外教会税"
