--- a/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
@@ -673,7 +673,7 @@
  kasmir_war.2.d: "最近一次军事演习中，发生了一起事故，导致多名士兵受伤，部分装备受损。"
  kasmir_war.2.a: "这是常有之事。"
  kasmir_war.3.t: "失败的模拟攻击"
- kasmir_war.3.d: "在最近的模拟攻击演习中，我们遭到了未知对手的炮击。确切的原因无法确定，并且提出了许多令人不安的问题。"
+ kasmir_war.3.d: "在最近的佯攻中，我们遭到了未知对手的炮击。具体原因尚不清楚，也引发了许多令人不安的问题。"
  kasmir_war.3.a: "没法更糟了"
  kasmir_war.10.t: "成功推进"
  kasmir_war.10.d: "我们在最近一次对敌作战中取得了胜利"
