--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -336,6 +336,7 @@
  market_sold_income_tt: "\n$$§G[?market_sold_value_track]§! from §YMarket Contracts§!\n"
  FRA_idea_Light_for_Europe_TT: "$$[?additional_income_FRA_Light_for_Europe|+3] from §YThe Light of Europe§!\n"
  FRA_cfa_franc_custodian_TT: "$$[?additional_income_FRA_cfa_franc_custodian|+3] from §YCFA Franc Custodian§!\n"
+ FRA_the_space_program_TT: "$$[?FRA.FRA_space_income_var|+3] from §YFrench Space Program§!"
  FRA_idea_nepad_modifier_expense_tt: "$$[?FRA.FRA_nepad_sponsor_weekly_cost|-3] from §YNEPAD Program Sponsor§!"
  open_contract_money_screen: "Open Contract Costs Screen"
  open_contract_money_screen_desc: "Opens the money cost screen for the international market."
