--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -564,7 +564,7 @@
  ukraine_donbass_war.1.a: "As planned"
 
  ukraine_donbass_war.2.t: "Unsuccessful push"
- ukraine_donbass_war.2.d: "Our enemy managed to repell our attack"
+ ukraine_donbass_war.2.d: "Our enemy managed to repel our attack"
  ukraine_donbass_war.2.a: "A minor setback"
 
  ukraine_donbass_war.3.t: "Stalemate after the attack"
