--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -700,7 +700,7 @@
  kasmir_war.10.a: "As planned"
 
  kasmir_war.11.t: "Unsuccessful push"
- kasmir_war.11.d: "Our enemy managed to repell our attack"
+ kasmir_war.11.d: "Our enemy managed to repel our attack"
  kasmir_war.11.a: "A minor setback"
 
  kasmir_war.12.t: "Stalemate after the attack"
@@ -724,7 +724,7 @@
  kasmir_war.20.a: "As planned"
 
  kasmir_war.21.t: "Unsuccessful push"
- kasmir_war.21.d: "Our enemy managed to repell our attack"
+ kasmir_war.21.d: "Our enemy managed to repel our attack"
  kasmir_war.21.a: "A minor setback"
 
  kasmir_war.22.t: "Stalemate after the attack"
