--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -260,7 +260,7 @@
  #Greece
  GRE_AI_BEHAVIOR: "@GRE Greece"
  RULE_HELLENIC_REPUBLIC: "Historical"
- RULE_HELLENIC_REPUBLIC_DESC: "Greece will mantain Democracy and will attempt to solve the Greek debt crisis by means of austerity measures."
+ RULE_HELLENIC_REPUBLIC_DESC: "Greece will maintain Democracy and will attempt to solve the Greek debt crisis by means of austerity measures."
  RULE_OPTION_KKE: "KKE"
  RULE_OPTION_KKE_DESC: "After discontent at the government grows due to the problems caused by the debt crisis the people will strengthen the Communist Party Of Greece and will attempt to create a Communist state."
  RULE_OPTION_GOLDEN_DAWN: "Golden Dawn"
