--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -476,7 +476,7 @@
  RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_PEACEFUL: "Bosniak's Lead The Way"
  RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_PEACEFUL_AI_DESC: "Bosniaks will dominate the elections leading to a pro bosnian government. That will begin cooperation with the other factions. with a goal of a nation of peace. Bosnia will also begin Collaboration with NATO powers "
  RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_COMMIE: "Workers Frontier"
- RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_COMMIE_AI_DESC: "Bosnia will head down the path of Unions and workers to overthrow the government and install a commuist government for the people"
+ RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_COMMIE_AI_DESC: "Bosnia will head down the path of Unions and workers to overthrow the government and install a communist government for the people"
  RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_MUSLIM_NATION: "Bosniak Revanchism"
  RULE_OPTION_PRO_BOSNIAN_LEADERSHIP_MUSLIM_NATION_AI_DESC: "Bonsia will attempt to follow the true path of islam and restore the greatness it once had "
  RULE_OPTION_PRO_LEADERSHIP_TO_SRPSKA: "Srpska Cooperation"
