--- a/localisation/english/MD_game_rules_l_english.yml
+++ b/localisation/english/MD_game_rules_l_english.yml
@@ -550,7 +550,7 @@
  RULE_SPREAD_INFLUENCE_GAIN_1: "1%"
  RULE_SPREAD_INFLUENCE_GAIN_1_DESC: "1% influence gained per spread action. For if you really want to slow down influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_2: "2%"
- RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "2% influence gained per sprad action. For if you really want to ramp influence gain."
+ RULE_SPREAD_INFLUENCE_GAIN_2_DESC: "2% influence gained per spread action. For if you really want to ramp influence gain."
  RULE_SPREAD_INFLUENCE_GAIN_4: "4%"
  RULE_SPREAD_INFLUENCE_GAIN_4_DESC: "4% influence gained per spread action. For if you really want to ramp up influence gain."
 
