--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -217,7 +217,7 @@
  LOADING_TIP_215: "I am confident my Hindutva face will be an asset when dealing with foreign affairs with other nations.\n - Narendra Modi -"
  LOADING_TIP_216: "We don't mind having sanctions banning us from Europe. We are not Europeans.\n - Robert Mugabe -"
  LOADING_TIP_217: "A lie told often enough becomes the truth.\n - Joseph Goebbels -"
- LOADING_TIP_218: "I declare before you all that my whole life whether it be long or short shall be devoted to your service and the service of our great imperial family to which we all belong.\n - Queen Elizabeth II, 1947 - 2022"
+ LOADING_TIP_218: "I declare before you all that my whole life whether it be long or short shall be devoted to your service and the service of our great imperial family to which we all belong.\n - Queen Elizabeth II, 1947 - 2022 -"
  LOADING_TIP_219: "Because we have nothing, we'll do everything.\n - Carlos Dittborn -"
  LOADING_TIP_220: "We cannot let Brussels put itself above the law.\n - Viktor Orban -"
  LOADING_TIP_221: "If I go, Iran will fall into ruins, and if Iran falls, the Middle East follows. And if the Middle East is in ruins, great terror will reign over the world.\n - Mohammad Reza Pahlavi -"
