--- a/Changelog.txt
+++ b/Changelog.txt
@@ -113,6 +113,12 @@ v1.10.2
   - Major fixes and improvements to the Russian localization
   - Fixed missing localization in the International Systems screen
   - Fixed the T-134 being drunk instead of being a bear (changed the hull name)
+  
+ Map:
+  - USA province level revamp
+  - Russian Central Federal District revamp(section)
+  - Morocco revamp
+  - River cross fix
 
  Modding Resources:
   - Added two modifiers "Base Migration Rate Value" and "Migration Rate Value Factor" for the Migration System
