--- a/localisation/english/MD_focus_IND_l_english.yml
+++ b/localisation/english/MD_focus_IND_l_english.yml
@@ -335,7 +335,7 @@
  IND_und_help_unemployment_desc: "Employing large sectors of the population is crucial for Indonesia to grow economically, so therefore we should construct new buildings to ensure that these people can get jobs"
  IND_und_united_indonesia: "A United Indonesia"
  IND_und_united_indonesia_desc: "United through our faith, and our nation we can finally rest seeing our policies implemented within the nation"
- IND_party_of_struggle: "The Democrat Party"
+ IND_party_of_struggle: "The Party Of Struggle"
  IND_party_of_struggle_desc: "The Democrat Party is amongst the most popular Pro-Western Parties in Indonesia and the party is advocating for a more liberal state"
  IND_strug_brace_for_change: "Brace For Change"
  IND_strug_brace_for_change_desc: "Hopefully our people are ready for the sweeping reforms our party will have to offer"
@@ -365,7 +365,7 @@
  IND_strug_host_regional_events_desc: "Indonesia has been the hub of regional events in the past, and it has brought many new faces to the state. We should continue this practice and offer to host more events"
  IND_strug_just_indonesia: "A Just Indonesia"
  IND_strug_just_indonesia_desc: "With all of our hard work, we can finally call it as it is, a new and Just Indonesia"
- IND_democrat_party: "The Party Of Struggle"
+ IND_democrat_party: "The Democrat Party"
  IND_democrat_party_desc: "The leftist party, party of Struggle is pushing for many drastic changes, but if it can deliver on those is anyones guess"
  IND_dem_greater_future: "A Greater Tomorrow"
  IND_dem_greater_future_desc: "We must ready the nation for reform and change, for tomorrow must be better than today, and Indonesia shall prosper!"
