--- a/localisation/english/MD_focus_TAI_l_english.yml
+++ b/localisation/english/MD_focus_TAI_l_english.yml
@@ -58,3 +58,8 @@ TAI_tourism: "Tourism"
 TAI_tourism_desc: ""
 TAI_nankang: "NANKANG"
 TAI_nankang_desc: ""
+
+
+
+####Ideas
+TAI_taipower: "Taipower"
