added filters for Ukraine

--- a/localisation/english/replace/replaced_from_focus_filter_tag_l_english.yml
+++ b/localisation/english/replace/replaced_from_focus_filter_tag_l_english.yml
@@ -72,6 +72,18 @@
  FOCUS_FILTER_OSSETIA_COMMI: "Communists"
  FOCUS_FILTER_OSSETIA_NYKHAZ: "Nykhaz"
  FOCUS_FILTER_OSSETIA_PEOPLE: "People's Party"
+ #Ukraine
+ FOCUS_FILTER_UKRAINE_VITRENKO: "Vitrenko's party"
+ FOCUS_FILTER_UKRAINE_SECURITY: "Security of Ukraine"
+ FOCUS_FILTER_UKRAINE_NAZIKI: "The Nationalist Congress"
+ FOCUS_FILTER_UKRAINE_SOCIALISTS: "The Socialists"
+ FOCUS_FILTER_UKRAINE_YUSHENKO: "Yushchenko's Party"
+ FOCUS_FILTER_UKRAINE_VSU: "The Armed Forces of Ukraine"
+ FOCUS_FILTER_UKRAINE_KOMMI: "The Communists"
+ FOCUS_FILTER_UKRAINE_KUCHMA: "Kuchma"
+ FOCUS_FILTER_UKRAINE_REGIONS: "The Party of Regions"
+ FOCUS_FILTER_UKRAINE_SERVANT: "Servant of People"
+ FOCUS_FILTER_UKRAINE_POROH: "European Solidarity"
  #Vanilla
  FOCUS_FILTER_POLITICAL: "Political"
  FOCUS_FILTER_RESEARCH: "Research"
