--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -275,8 +275,8 @@
  corrupt_politicians_desc: ""
  HKG_victoria_harbour: "Victoria Harbour"
  HKG_victoria_harbour_desc: ""
- Basic_Law_HKG: "The Basic Law of Hong Kong SAR"
- Basic_Law_milltary_HKG: "The Basic Law of Hong Kong SAR"
+ Basic_Law_HKG: "§8The Basic Law of §H[HKG.GetFlag]Hong Kong SAR§!§!"
+ Basic_Law_milltary_HKG: "The Basic Law of [HKG.GetFlag]Hong Kong SAR"
  Basic_Law_milltary_HKG_desc: ""
  Basic_Law_HKG_desc: "The Basic Law was the founding document of the Hong Kong Special Administrative Region after the handover of Hong Kong from the United Kingdom to the People's Republic of China. Among other things, the document outlines the status of Hong Kong relative to China, granted it autonomy in all matters other than defence and foreign affairs, both of which are entrusted to the central government.\n\n§W----------\nAs a §Y[HKG.GetFlag]§!§HS.A.R§!, does not have its own defense force, the Required level of defense budget will be maintained at §H0§!, and would also not allow to change §GMilitary Spending.§!§!"
  One_Country_Two_Systems: "One Country Two Systems"
