--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -3740,7 +3740,7 @@
  UKR.Neutral_Communism: "£UKR_neutral_communism Spilka Komunistiv Ukrayiny"
  UKR.Neutral_Communism_icon: "£UKR_neutral_communism"
  UKR.Neutral_Communism_desc: "The Union of Communists £UKR_neutral_communism  of Ukraine is a Ukrainian anti-revisionist Marxist–Leninist Communist party. Being alienated from the majority of pro-Russian left parties, the SKU considers any modern conflicts to be bourgeois and does not consider it necessary to intervene in them, since they do not correspond to the interests of the proletariat."
- UKR.Neutral_green: "£UKR_greenone Yednist'"
+ UKR.Neutral_green: "£UKR_greenone Unity of Oleksandr Omelchenko"
  UKR.Neutral_green_icon: "£UKR_greenone"
  UKR.Neutral_green_desc: "Unity of Oleksandr Omelchenko £UKR_greenone  is a political party in Ukraine created in 1999 as a protest party against the establishment. The party was led by the former mayor of Kyiv Oleksandr Omelchenko and held moderate pro-green and agrarian views."
  UKR.Neutral_green_two: "£ukr_greens PZU"
