New tag maintenance

--- a/localisation/english/MD_dynamic_scripting_l_english.yml
+++ b/localisation/english/MD_dynamic_scripting_l_english.yml
@@ -1971,3 +1971,23 @@
  script.0.RUS_GetNameWithFlag: "[RUS.GetNameWithFlag] "
  script.0.RUS_GetLeader: "[RUS.GetLeader] "
  script.0.RUS_GetAdjective: "[RUS.GetAdjective] "
+ script.0.CYR_GetFlag: "[CYR.GetFlag] "
+ script.0.CYR_GetName: "[CYR.GetName] "
+ script.0.CYR_GetNameWithFlag: "[CYR.GetNameWithFlag] "
+ script.0.CYR_GetLeader: "[CYR.GetLeader] "
+ script.0.CYR_GetAdjective: "[CYR.GetAdjective] "
+ script.0.FEZ_GetFlag: "[FEZ.GetFlag] "
+ script.0.FEZ_GetName: "[FEZ.GetName] "
+ script.0.FEZ_GetNameWithFlag: "[FEZ.GetNameWithFlag] "
+ script.0.FEZ_GetLeader: "[FEZ.GetLeader] "
+ script.0.FEZ_GetAdjective: "[FEZ.GetAdjective] "
+ script.0.TIE_GetFlag: "[TIE.GetFlag] "
+ script.0.TIE_GetName: "[TIE.GetName] "
+ script.0.TIE_GetNameWithFlag: "[TIE.GetNameWithFlag] "
+ script.0.TIE_GetLeader: "[TIE.GetLeader] "
+ script.0.TIE_GetAdjective: "[TIE.GetAdjective] "
+ script.0.TRP_GetFlag: "[TRP.GetFlag] "
+ script.0.TRP_GetName: "[TRP.GetName] "
+ script.0.TRP_GetNameWithFlag: "[TRP.GetNameWithFlag] "
+ script.0.TRP_GetLeader: "[TRP.GetLeader] "
+ script.0.TRP_GetAdjective: "[TRP.GetAdjective] "
