MLW Code That I Forgor

--- a/localisation/english/MD_focus_MLW_l_english.yml
+++ b/localisation/english/MD_focus_MLW_l_english.yml
@@ -237,12 +237,12 @@
 
  MLW_AIO_SADC_trade_menu_TITLE_TEXT: "§WSADC Trade Deals§!"
  MLW_AIO_SADC_trade_menu_CONSUMER_TITLE_TEXT: "Consumer Goods Stockpile:"
- MLW_AIO_SADC_trade_menu_CONSUMER_AMOUNT_TEXT: "[?ROOT.SADC_consumer_goods_total|0] Units in Stock"
+ MLW_AIO_SADC_trade_menu_CONSUMER_AMOUNT_TEXT: "[?ROOT.MLW_SADC_consumer_goods_total|0] Units in Stock"
 
 
 
  MLW_AIO_SADC_trade_menu_LUXURY_TITLE_TEXT: "Luxury Goods Stockpile:"
- MLW_AIO_SADC_trade_menu_LUXURY_AMOUNT_TEXT: "[?ROOT.SADC_luxury_goods_total|0] Units in Stock"
+ MLW_AIO_SADC_trade_menu_LUXURY_AMOUNT_TEXT: "[?ROOT.MLW_SADC_luxury_goods_total|0] Units in Stock"
 
 
  MLW_AIO_SADC_TEST_TEXT: "[?ROOT.SADC_TEST_VAR|+0]"
@@ -271,7 +271,7 @@
 
 
  SADC_member_opinion_TEXT: "[SADC_member_opinion_TEXT_check]"
- SADC_member_opinion_TEXT_other: "[?opinion@ROOT|+0]"
+ SADC_member_opinion_TEXT_other: "§Y[THIS.GetAdjective]§! Opinion of §Y[ROOT.GetNameWithFlag]§!: [?opinion@ROOT|+0]"
  SADC_member_opinion_TEXT_self: "§YN/A§!"
 
  SADC_member_opinion_TT: "[SADC_member_opinion_TT_check]"
@@ -328,9 +328,10 @@
 
  # MONEY TTs
  # INCOMES
- MLW_additional_INCOMES_display_TT: "[MLW_MZUZU_INCOME]"
+ MLW_additional_INCOMES_display_TT: "[MLW_MZUZU_INCOME][MLW_MZUZU_INCOME]"
  MLW_MZUZU_INCOME_display_TT: "$$[?MLW_MZ_weekly_income|+3] from §YMzuzu Motors§!\n"
+ MLW_SADC_INCOME_display_TT: "$$[?MLW_SADC_trade_income|+3] from §YSADC Trade Deals§!\n"
  # EXPENSES
- MLW_additional_EXPENSES_display_TT: "[MLW_MZUZU_EXPENSE]"
+ MLW_additional_EXPENSES_display_TT: "[MLW_MZUZU_EXPENSE][MLW_SADC_TRADING_EXPENSE]"
  MLW_MZUZU_EXPENSE_display_TT: "$$[?MLW_MZ_weekly_expenses|-3] from §YMzuzu Motors§!\n"
-
+ MLW_SADC_EXPENSE_display_TT: "$$[?MLW_SADC_trade_expenses|-3] from §YSADC Trade Deals§!\n"
