--- a/localisation/english/MD_focus_TAI_l_english.yml
+++ b/localisation/english/MD_focus_TAI_l_english.yml
@@ -62,4 +62,7 @@ TAI_nankang_desc: ""
 
 
 ####Ideas
-TAI_taipower: "Taipower"
+TAI_taipower1: "Taipower"
+TAI_taipower2: "Taipower"
+TAI_taipower3: "Taipower"
+TAI_taipower4: "Taipower"
