--- a/Changelog.txt
+++ b/Changelog.txt
@@ -98,23 +98,24 @@ Achievements:
   - Fixed the missing parent class for the Futuristic Integrated Missile Radar Control for MTG ships
 
  Content:
+  - NEW TREES: Libya, Tibesti, African Union (Shared)
+  - NEW REWORKED/IMPROVED: Ukraine, Crimea, Donetsk People's Republic
   - New building "Commercialized Agriculture District"
   - New Internal Factions events and decisions
   - Decoupled the Corruption Events from their old pulse and mixed them with the other random events. It should make it a bit less spammy
   - Added "The Eurozone Debt Crisis" event chain spurred from the USA Global Financial Crisis
   - Added "Migration Rate" mechanic to the game
   - Added a new law "Migration Law"
-  - Reworked Trees: Donetsk People Republic, Crimea, Ukraine
   - Updated content for nations to the new Migration Mechanics
   - Added the "Migration Crisis of Europe" to the game
   - Added the idea "The Casino City for the Rich" fot Monaco
   - Added the "Naval Power of the Continent" mini-mechanic to the power ranking system
   - Added the "Campaign for Lower Government Spending" decision
   - Added an event in 2010 regarding the formation of Constellis
-  - New focus tree for Libya & Tibesti
   - Added four new releasables: Cyrenaica, Fezzan, Tibesti & Tripolitania
   - Added new country leader traits: Skilled Lobbyist, Inexperienced General, Scholarly Challenged, Substance Abuser, Playboy Lifestyle, Aviation Engineer, Agrarian Expert & Convicted Criminal
-  - Added African Union mechanic
+  - Added African Union mechanics to accompany the shared tree
+  - Added a discourage population decision for those who want to make their country have less people pre-maritally holding hands
 
  Game Rules:
   - Removed the "Disabled AI Missile Alert" game rule
@@ -142,7 +143,7 @@ Achievements:
   - Fixed missing localization in the International Systems screen
   - Added country specific division leader ranks to all countries that currently have focus trees
   - Fixed the T-134 being drunk instead of being a bear (changed the hull name)
-  
+
  Map:
   - USA province level revamp
   - Russian Central Federal District revamp(section)
