fix missing ukr ideas

--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -1309,6 +1309,8 @@
  UKR_our_agricultrure: "Domestic Agriculture"
  UKR_our_agricultrure_desc: "The Ukrainian agricultural industry is one of the best in the world, and we will try not to lose this title"
  UKR_azovsteel: "Azovstal"
+ UKR_yushenko_premier_idea: "The Yushchenko Government"
+ UKR_yanuk_premier_idea: "The Yanukovych Government"
  UKR_unstable_government_idea: "Dissatisfaction With The Maidan"
  UKR_donetsksteel: "Donetsksteel"
  UKR_land_reform_idea: "Land Reform"
@@ -2416,6 +2418,7 @@
  UKR_inter_legion_idea_desc: "Many foreigners from all over the world are ready to support us in our struggle for independence"
  UKR_air_superior_idea: "Aerial Dominance Tactics"
  UKR_air_superior_idea_desc: "We strive to gain air superiority"
+ UKR_rus_genshtab_idea: "Subordination to the Russian General Staff"
  ##########Toooitips##########
  UKR_inter_created_tt: "§YInternational Legion§! will be created and you will be able to hire allied battalions from different countries"
  UKR_kraken_created_tt: "§YKraken Battalion§! Will be created"
