--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -1026,17 +1026,17 @@
  air_xp_20_blocked: "£air_experience    §R20§!"
  air_xp_20_tooltip: "It costs £air_experience 20 to take the decision"
 
- cost_gur_points_5: "GUR operational reserve: §H5§!"
- cost_gur_points_5_blocked: "GUR operational reserve: §R5§!"
- cost_gur_points_5_tooltip: "It costs 5 GUR operational reserve to take the decision"
+ cost_hur_points_5: "HUR operational reserve: §H5§!"
+ cost_hur_points_5_blocked: "HUR operational reserve: §R5§!"
+ cost_hur_points_5_tooltip: "It costs 5 HUR operational reserve to take the decision"
 
- cost_gur_points_4: "GUR operational reserve: §H4§!"
- cost_gur_points_4_blocked: "GUR operational reserve: §R4§!"
- cost_gur_points_4_tooltip: "It costs 4 GUR operational reserve to take the decision"
+ cost_hur_points_4: "HUR operational reserve: §H4§!"
+ cost_hur_points_4_blocked: "HUR operational reserve: §R4§!"
+ cost_hur_points_4_tooltip: "It costs 4 HUR operational reserve to take the decision"
 
- cost_gur_points_10: "GUR operational reserve: §H10§!"
- cost_gur_points_10_blocked: "GUR operational reserve: §R10§!"
- cost_gur_points_10_tooltip: "It costs 10 GUR operational reserve to take the decision"
+ cost_hur_points_10: "HUR operational reserve: §H10§!"
+ cost_hur_points_10_blocked: "HUR operational reserve: §R10§!"
+ cost_hur_points_10_tooltip: "It costs 10 HUR operational reserve to take the decision"
 
  historical_tanks_category: "Historical AFV Designs"
  historical_tanks_category_desc: ""
