--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -1812,14 +1812,14 @@
  UKR_sbu_alpha_desc: "Group "A" of the Special Operations Center of the Security Service of Ukraine is a special unit of the Security Service of Ukraine. Officially it bears the name "Military unit E6117""
  UKR_sbu_administration: "Civil-Military Administration"
  UKR_sbu_administration_desc: "The Civil-Military Administration is a temporary state authority in Ukraine, created in the territories adjacent to the combat zone"
- UKR_gur: "Main Directorate of Intelligence"
- UKR_gur_desc: "The Main Directorate of Intelligence of the Ministry of Defence of Ukraine, also known in English as the Defense Intelligence of Ukraine (DIU), is the military intelligence service of the Ukrainian government. It is an agency of the Ministry of Defence, not the General Staff of the Armed Forces of Ukraine."
- UKR_gur_reform: "HUR Reform"
- UKR_gur_reform_desc: "It is time to begin reforms of our Main Intelligence Agency to increase efficiency and influence opportunities in other countries"
+ UKR_hur: "Main Directorate of Intelligence"
+ UKR_hur_desc: "The Main Directorate of Intelligence of the Ministry of Defence of Ukraine, also known in English as the Defense Intelligence of Ukraine (DIU), is the military intelligence service of the Ukrainian government. It is an agency of the Ministry of Defence, not the General Staff of the Armed Forces of Ukraine."
+ UKR_hur_reform: "HUR Reform"
+ UKR_hur_reform_desc: "It is time to begin reforms of our Main Intelligence Agency to increase efficiency and influence opportunities in other countries"
  UKR_peacemakers: "Peacekeeping Program"
  UKR_peacemakers_desc: "Our country has always sought to participate in peacekeeping missions all over the planet, and we will continue this tradition"
- UKR_gur_battalions: "HUR Battalions"
- UKR_gur_battalions_desc: "We are mobilizing the battalions of our HUR, perhaps they will help us at the front"
+ UKR_hur_battalions: "HUR Battalions"
+ UKR_hur_battalions_desc: "We are mobilizing the battalions of our HUR, perhaps they will help us at the front"
  UKR_border_guard: "State Border Guard Service"
  UKR_border_guard_desc: "The State Border Guard Service of Ukraine is the border guard of Ukraine. It is an independent law enforcement agency, organized by the Constitution of Ukraine as a military formation, the head of which is subordinated to the President of Ukraine"
  UKR_reform_vv: "Reform of the Internal Troops"
@@ -1828,24 +1828,24 @@
  UKR_finance_vv_desc: "We will finance the activities of special battalions of the internal troops, perhaps in the future they will be very useful to us"
  UKR_sbu_white_wolves: "White Wolves Battalion"
  UKR_sbu_white_wolves_desc: "The SBU will send a battalion created from its employees to the war"
- UKR_gur_opearational_support: "GUR Operational Support"
- UKR_gur_opearational_support_desc: "GUR currently supports ongoing operations with intel and by using its units on the frontline."
+ UKR_hur_opearational_support: "HUR Operational Support"
+ UKR_hur_opearational_support_desc: "HUR currently supports ongoing operations with intel and by using its units on the frontline."
  ##########Ideas##########
  UKR_SBU_1: "SBU"
  UKR_SBU_1_desc: "The heir of the Ukrainian branch of the KGB - SBU performs the same functions responsibly and efficiently. Ukraine can sleep peacefully"
  UKR_Alpha: "Alpha"
- UKR_gur: "Main Directorate of Intelligence"
- UKR_gur_desc: "The HUR has a wide range of powers and capabilities that we will be able to implement in our foreign policy"
- UKR_gur_battalions: "Battalions of the HUR of Ukraine"
- UKR_gur_battalions_desc: "The battalions of the GUR of Ukraine are participating in hostilities on the orders of the Ukrainian command on our side, after the end of hostilities, they will leave our armed forces"
+ UKR_hur: "Main Directorate of Intelligence"
+ UKR_hur_desc: "The HUR has a wide range of powers and capabilities that we will be able to implement in our foreign policy"
+ UKR_hur_battalions: "Battalions of the HUR of Ukraine"
+ UKR_hur_battalions_desc: "The battalions of the HUR of Ukraine are participating in hostilities on the orders of the Ukrainian command on our side, after the end of hostilities, they will leave our armed forces"
  UKR_border: "State Border Guard Service"
  UKR_border_desc: "Our borders are too big to rely on individual units of the armed forces to protect them. The border troops will perform this task more efficiently"
  UKR_svr: "Foreign Intelligence Service"
  UKR_sviaz: "State Special Communications Service"
  UKR_sbu_sviaz: "State Special Communications Service"
  ##########Decisions##########
- UKR_gur_decision_category: "The Main Intelligence Agency"
- UKR_gur_decision_category_desc: "\n\n\n\n\n\n£UKR_desctext_hur\n\n\n\n\n\n\n\n\nThe Main Intelligence Directorate of the Ministry of Defense of Ukraine is the military intelligence service of the Ukrainian government. This is a department of the Ministry of Defense, not the General Staff of the Armed Forces of Ukraine. With the help of this ministry, we will be able to carry out various sabotage operations in neighboring countries, as well as make sorties with the help of sabotage battalion.\n\n\n\nCurrent amount of GUR opearation opearational points: [?gur_points]"
+ UKR_hur_decision_category: "The Main Intelligence Agency"
+ UKR_hur_decision_category_desc: "\n\n\n\n\n\n£UKR_desctext_hur\n\n\n\n\n\n\n\n\nThe Main Intelligence Directorate of the Ministry of Defense of Ukraine is the military intelligence service of the Ukrainian government. This is a department of the Ministry of Defense, not the General Staff of the Armed Forces of Ukraine. With the help of this ministry, we will be able to carry out various sabotage operations in neighboring countries, as well as make sorties with the help of sabotage battalion.\n\n\n\nCurrent amount of HUR opearation opearational points: [?hur_points]"
  UKR_hire_kastus: "Hire §YKastus Kalinovsky Regiment§!"
  UKR_hire_caucas_drg: "Hire §YDRG United Caucasus§!"
  UKR_hire_belarus_corpus: "Hire §YBelarusian Legion§!"
@@ -1878,7 +1878,7 @@
  UKR_attack_military_factories: "Attack Military Factories"
  UKR_attack_belgorod_region: "Infiltration Attack Against Kursk And Belgorod"
  UKR_attack_black_sea_region: "Attack Russian Ships In The Black Sea"
- UKR_operational_support: "Use GUR For Operational Support"
+ UKR_operational_support: "Use HUR For Operational Support"
  ##########Events##########
  ukraine_hur.1.t: ""
  ukraine_hur.1.d: ""
@@ -1921,7 +1921,7 @@
  ukraine_hur.13.d: ""
  ukraine_hur.13.a: ""
  ##########Tooltips##########
- UKR_gur_created_tt: "§YWe will be able to launch a special limited operations§!"
+ UKR_hur_created_tt: "§YWe will be able to launch a special limited operations§!"
  UKR_vv_tooltip_tt: "§YFinancing of special forces will significantly reduce the consequences of a possible Maidan§!"
 
 
@@ -1980,7 +1980,7 @@
  UKR_befriend_georgia: "Union With Georgia"
  UKR_befriend_georgia_desc: "Georgia is an important partner and has a strategic position in the Caucasus region. Having such an ally in the Alliance will be very beneficial for us"
  UKR_caucasus_volunteers: "Volunteers from the Caucasus"
- UKR_caucasus_volunteers_desc: "We will invite many volunteers from the Caucasus to form GUR battalions"
+ UKR_caucasus_volunteers_desc: "We will invite many volunteers from the Caucasus to form HUR battalions"
  UKR_dagestan_reb_prepare: "Prepare An Uprising in Dagestan"
  UKR_dagestan_reb_prepare_desc: "We will begin preparations for a special limited operation in Dagestan"
  UKR_befriend_chechens: "Friendship with Ichkeria"
@@ -2038,17 +2038,17 @@
  UKR_nationalists_reconcista: "The Revived Reconquista"
  UKR_nationalists_reconcista_desc: "Ukraine will become a beacon of the revival of Christianity in Europe! The holy march from Kiev begins"
  ##########Tooltips##########
- UKR_gur_operation_belarus_tt: "We will be able to launch a special limited operation in §Y[BLR.GetNamewithFlag]§!"
- UKR_gur_operation_poland_tt: "We will be able to launch a special limited operation in §Y[POL.GetNamewithFlag]§!"
- UKR_gur_operation_crimea_tt: "We will be able to launch a special limited operation in §Y[CRM.GetNamewithFlag]§!"
- UKR_gur_operation_kuban_tt: "We will be able to launch a special limited operation in §Y[KUB.GetNamewithFlag]§!"
- UKR_gur_operation_dagestan_tt: "We will be able to launch a special limited operation in §Y[DAG.GetNamewithFlag]§!"
- UKR_gur_operation_chechnya_tt: "We will be able to launch a special limited operation in §Y[CHE.GetNamewithFlag]§!"
- UKR_gur_operation_caucas_volunteer_tt: "New GUR battalions will be opened for special limited operations"
- UKR_gur_operation_russian_tt: "We will be able to launch a special limited operations in §Y[SOV.GetNamewithFlag]§!"
- UKR_gur_operation_vladivostok_tt: "We will be able to launch a special limited operations in §Y[FAR.GetNamewithFlag]§!"
- UKR_gur_operation_silesia_tt: "We will be able to launch a special limited operation in §Y[SIL.GetNamewithFlag]§!"
- UKR_gur_operation_kashubia_tt: "We will be able to launch a special limited operation in §Y[KSH.GetNamewithFlag]§!"
+ UKR_hur_operation_belarus_tt: "We will be able to launch a special limited operation in §Y[BLR.GetNamewithFlag]§!"
+ UKR_hur_operation_poland_tt: "We will be able to launch a special limited operation in §Y[POL.GetNamewithFlag]§!"
+ UKR_hur_operation_crimea_tt: "We will be able to launch a special limited operation in §Y[CRM.GetNamewithFlag]§!"
+ UKR_hur_operation_kuban_tt: "We will be able to launch a special limited operation in §Y[KUB.GetNamewithFlag]§!"
+ UKR_hur_operation_dagestan_tt: "We will be able to launch a special limited operation in §Y[DAG.GetNamewithFlag]§!"
+ UKR_hur_operation_chechnya_tt: "We will be able to launch a special limited operation in §Y[CHE.GetNamewithFlag]§!"
+ UKR_hur_operation_caucas_volunteer_tt: "New HUR battalions will be opened for special limited operations"
+ UKR_hur_operation_russian_tt: "We will be able to launch a special limited operations in §Y[SOV.GetNamewithFlag]§!"
+ UKR_hur_operation_vladivostok_tt: "We will be able to launch a special limited operations in §Y[FAR.GetNamewithFlag]§!"
+ UKR_hur_operation_silesia_tt: "We will be able to launch a special limited operation in §Y[SIL.GetNamewithFlag]§!"
+ UKR_hur_operation_kashubia_tt: "We will be able to launch a special limited operation in §Y[KSH.GetNamewithFlag]§!"
  did_not_support_the_baltic_black_sea_union: "§YDid not support the initiative of the Black Sea-Baltic Union§!"
  ##########Events##########
  ukraine_congress.1.t: "New National Ukraine"
@@ -2350,13 +2350,13 @@
  UKR_silesian_rebellion: "Prepare a Rebellion in Silesia"
  UKR_silesian_rebellion_desc: "We will prepare an insurgency in this region to undermine Poland's defense"
  UKR_vilnoe_pospolitoe_rushenie: "The Battalion Pospolite Ruszenie"
- UKR_vilnoe_pospolitoe_rushenie_desc: "A new operational Battalion of the GUR will be created to conduct special limited operations on enemy territory"
+ UKR_vilnoe_pospolitoe_rushenie_desc: "A new operational Battalion of the HUR will be created to conduct special limited operations on enemy territory"
  UKR_belarus_volunteers: "The Battalion Rokossovsky"
- UKR_belarus_volunteers_desc: "A new operational Battalion of the GUR will be created to conduct special limited operations on enemy territory"
+ UKR_belarus_volunteers_desc: "A new operational Battalion of the HUR will be created to conduct special limited operations on enemy territory"
  UKR_legion_free_poland: "The Freedom of Poland Legion"
- UKR_legion_free_poland_desc: "A new operational Battalion of the GUR will be created to conduct special limited operations on enemy territory"
+ UKR_legion_free_poland_desc: "A new operational Battalion of the HUR will be created to conduct special limited operations on enemy territory"
  UKR_polish_hetmanate_army: "The Battalion of the Polish Hetmanate"
- UKR_polish_hetmanate_army_desc: "A new operational Battalion of the GUR will be created to conduct special limited operations on enemy territory"
+ UKR_polish_hetmanate_army_desc: "A new operational Battalion of the HUR will be created to conduct special limited operations on enemy territory"
  UKR_polish_liberation_batallions: "The Polish Liberation Army"
  UKR_polish_liberation_batallions_desc: "Many Polish residents are ready to fight on our side, against the government that, in their opinion, occupied the country"
  UKR_air_dominance_tactics: "Tactics Of Aviation Dominance"
@@ -2422,7 +2422,7 @@
  ##########Toooitips##########
  UKR_inter_created_tt: "§YInternational Legion§! will be created and you will be able to hire allied battalions from different countries"
  UKR_kraken_created_tt: "§YKraken Battalion§! Will be created"
- UKR_hur_other_battalions_created_tt: "§YNew GUR Battalions§! will be created"
+ UKR_hur_other_battalions_created_tt: "§YNew HUR Battalions§! will be created"
  UKR_free_russia_created_tt: "§YThe Freedom of Russia Legion§! will be available for special limited operations"
  UKR_rdk_created_tt: "§YThe Russian Volunteer Corps§! will be available for special limited operations"
  UKR_republican_army_created_tt: "§YRegional Separatist Battalions§! will become available for special operations"
